--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
+			<link href="{{ asset('assets/css/style.css') }} " rel="stylesheet">
+			<link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }} " rel="stylesheet">
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{% block javascripts %}
+			<script src="{{ asset('assets/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+		{% endblock %}
+	</head>
+	<body>
+		{% block nav %}
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="{{ path('home') }}">FR Project Manager</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNavDropdown">
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link{% if app.request.pathinfo == path('home') %} active{% endif %}" aria-current="page" href="#"></a>
+							</li>
+						</ul>
+					</div>
+
+
+					{% if app.user %}
+						<div class="mb-3 ms-auto">
+							<a href="{{ path('security_logout') }}">Logout</a>
+						</div>
+					{% endif %}
+				</div>
+			</nav>
+		{% endblock %}
+		{% block body %}{% endblock %}
+	</body>
 </html>
